--- a/Views/Inschrijving/Create.cshtml
+++ b/Views/Inschrijving/Create.cshtml
@@ -22,8 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="AcademieJaarId" class="control-label"></label>
-                <input asp-for="AcademieJaarId" class="form-control" />
-                <span asp-validation-for="AcademieJaarId" class="text-danger"></span>
+                <select asp-for="AcademieJaarId" class ="form-control" asp-items="ViewBag.AcademieJaarId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
