--- a/Views/Lector/Index.cshtml
+++ b/Views/Lector/Index.cshtml
@@ -22,7 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Gebruiker.GebruikerId)
+                @Html.DisplayFor(modelItem => item.Gebruiker.VoorNaam)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.LectorId">Edit</a> |
