--- a/Views/Lector/Details.cshtml
+++ b/Views/Lector/Details.cshtml
@@ -4,17 +4,16 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details Lector</h1>
 
 <div>
-    <h4>Lector</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Gebruiker)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gebruiker.GebruikerId)
+            @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
         </dd>
     </dl>
 </div>
