--- a/Views/Lector/Index.cshtml
+++ b/Views/Lector/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HogeschoolPXL.Models.Lector>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Overview";
 }
 
-<h1>Index</h1>
+<h1>Overview</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
