--- a/Views/AcademieJaar/Details.cshtml
+++ b/Views/AcademieJaar/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details AcademieJaar</h1>
 
 <div>
-    <h4>AcademieJaar</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
