--- a/Views/Gebruiker/Create.cshtml
+++ b/Views/Gebruiker/Create.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Gebruiker</h4>
+<h1>Create Gebruiker</h1>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
