--- a/Views/Gebruiker/Details.cshtml
+++ b/Views/Gebruiker/Details.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details Gebruiker</h1>
+<hr />
 
 <div>
-    <h4>Gebruiker</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Naam)
