--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -4,18 +4,15 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gebruiker)
+            Student
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gebruiker.GebruikerId)
+            @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
         </dd>
     </dl>
     
