--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -4,21 +4,33 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details Student</h1>
 
-<div>
-    <h4>Student</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gebruiker)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gebruiker.GebruikerId)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.StudentId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Student
+            </th>
+            <th>
+                Email
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
+                @Html.DisplayFor(model => model.Gebruiker.Naam)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.Gebruiker.Email)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@Model?.StudentId">Edit</a> |
+                <a asp-action="Index">Back to List</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
