--- a/Views/Student/Edit.cshtml
+++ b/Views/Student/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Student</h1>
 
-<h4>Student</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,7 +13,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="StudentId" />
             <div class="form-group">
-                <label asp-for="GebruikerId" class="control-label"></label>
                 <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
                 <span asp-validation-for="GebruikerId" class="text-danger"></span>
             </div>
