--- a/Views/Vak/Create.cshtml
+++ b/Views/Vak/Create.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Vak</h4>
+<h1>Create Vak</h1>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -23,7 +22,7 @@
                 <span asp-validation-for="StudiePunten" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HandboekId" class="control-label"></label>
+                <label asp-for="HandboekId" class="control-label">Handboek</label>
                 <select asp-for="HandboekId" class ="form-control" asp-items="ViewBag.HandboekId"></select>
             </div>
             <div class="form-group">
