--- a/Views/Vak/Edit.cshtml
+++ b/Views/Vak/Edit.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Vak</h4>
+<h1>Edit Vak</h1>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -24,7 +23,7 @@
                 <span asp-validation-for="StudiePunten" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HandboekId" class="control-label"></label>
+                <label asp-for="HandboekId" class="control-label">Handboek</label>
                 <select asp-for="HandboekId" class="form-control" asp-items="ViewBag.HandboekId"></select>
                 <span asp-validation-for="HandboekId" class="text-danger"></span>
             </div>
