--- a/Views/VakLector/Create.cshtml
+++ b/Views/VakLector/Create.cshtml
@@ -4,20 +4,19 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>VakLector</h4>
+<h1>Create VakLector</h1>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LectorId" class="control-label"></label>
+                <label asp-for="LectorId" class="control-label">Lector</label>
                 <select asp-for="LectorId" class ="form-control" asp-items="ViewBag.LectorId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="VakId" class="control-label"></label>
+                <label asp-for="VakId" class="control-label">Vak</label>
                 <select asp-for="VakId" class ="form-control" asp-items="ViewBag.VakId"></select>
             </div>
             <div class="form-group">
