--- a/Views/VakLector/Delete.cshtml
+++ b/Views/VakLector/Delete.cshtml
@@ -4,24 +4,23 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
+<hr />
+
 <div>
-    <h4>VakLector</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Lector)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lector.LectorId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Lector.Gebruiker.VoorNaam)
+            @Html.DisplayFor(model => model.Lector.Gebruiker.Naam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Vak)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vak.VakId)
+            @Html.DisplayFor(model => model.Vak.VakNaam)
         </dd>
     </dl>
     
