--- a/Views/VakLector/Details.cshtml
+++ b/Views/VakLector/Details.cshtml
@@ -4,23 +4,23 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details VakLector</h1>
+<hr />
 
 <div>
-    <h4>VakLector</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Lector)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lector.LectorId)
+            @Html.DisplayFor(model => model.Lector.Gebruiker.VoorNaam) 
+            @Html.DisplayFor(model => model.Lector.Gebruiker.Naam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Vak)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vak.VakId)
+            @Html.DisplayFor(model => model.Vak.VakNaam)
         </dd>
     </dl>
 </div>
