--- a/Views/Inschrijving/Details.cshtml
+++ b/Views/Inschrijving/Details.cshtml
@@ -4,17 +4,17 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details Inschrijving</h1>
+<hr />
 
 <div>
-    <h4>Inschrijving</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.Gebruiker)
+            @Html.DisplayNameFor(model => model.Student)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.Gebruiker.VoorNaam)
+            @Html.DisplayFor(model => model.Student.Gebruiker.VoorNaam) 
+            @Html.DisplayFor(model => model.Student.Gebruiker.Naam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.VakLector.Vak)
