--- a/Views/Inschrijving/Delete.cshtml
+++ b/Views/Inschrijving/Delete.cshtml
@@ -4,30 +4,29 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
+<hr />
+
 <div>
-    <h4>Inschrijving</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Student)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.StudentId)
+            @Html.DisplayFor(model => model.Student.Gebruiker.VoorNaam)
+            @Html.DisplayFor(model => model.Student.Gebruiker.Naam)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VakLector)
+            @Html.DisplayNameFor(model => model.VakLector.Vak)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VakLector.VakLectorId)
+            @Html.DisplayFor(model => model.VakLector.Vak.VakNaam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AcademieJaar)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AcademieJaar.AcademieJaarId)
+            @Html.DisplayFor(model => model.AcademieJaar.Datum)
         </dd>
     </dl>
     
