--- a/Views/Handboek/Index.cshtml
+++ b/Views/Handboek/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Titel)
             </td>
             <td>
-                € @Html.DisplayFor(modelItem => item.KostPrijs)
+                @Html.DisplayFor(modelItem => item.KostPrijs)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UitgifteDatum)
