--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -9,7 +9,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            Student
+            @Html.DisplayNameFor(model => model.Gebruiker)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
