--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -10,10 +10,10 @@
     <thead>
         <tr>
             <th>
-                Student
+                @Html.DisplayNameFor(model => model.Gebruiker)
             </th>
             <th>
-                Email
+                @Html.DisplayNameFor(model => model.Gebruiker.Email)
             </th>
             <th></th>
         </tr>
