--- a/Views/VakLector/Create.cshtml
+++ b/Views/VakLector/Create.cshtml
@@ -12,11 +12,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LectorId" class="control-label">Lector</label>
+                <label asp-for="LectorId" class="control-label"></label>
                 <select asp-for="LectorId" class ="form-control" asp-items="ViewBag.LectorId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="VakId" class="control-label">Vak</label>
+                <label asp-for="VakId" class="control-label"></label>
                 <select asp-for="VakId" class ="form-control" asp-items="ViewBag.VakId"></select>
             </div>
             <div class="form-group">
