--- a/Views/Handboek/Details.cshtml
+++ b/Views/Handboek/Details.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = "Details";
+    var b = Html.DisplayFor(model => model.Afbeelding).ToString();
+    var a = Html.DisplayFor(model => model.Afbeelding);
+
 }
 
 <h1>Details Handboek</h1>
@@ -31,7 +34,14 @@
             @Html.DisplayNameFor(model => model.Afbeelding)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Afbeelding)
+            @if (Model.Afbeelding == null)
+            {
+                <text>Geen Afbeelding Beschikbaar</text>
+            }
+            else
+            {
+                <img src="@Model.Afbeelding" width="170px" height="240px" />
+            }
         </dd>
     </dl>
 </div>
