--- a/Views/Inschrijving/Create.cshtml
+++ b/Views/Inschrijving/Create.cshtml
@@ -12,15 +12,15 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="StudentId" class="control-label">Student</label>
+                <label asp-for="StudentId" class="control-label"></label>
                 <select asp-for="StudentId" class ="form-control" asp-items="ViewBag.StudentId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="VakLectorId" class="control-label">VakLector</label>
+                <label asp-for="VakLectorId" class="control-label">Vak</label>
                 <select asp-for="VakLectorId" class ="form-control" asp-items="ViewBag.VakLectorId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AcademieJaarId" class="control-label">AcademieJaar</label>
+                <label asp-for="AcademieJaarId" class="control-label"></label>
                 <select asp-for="AcademieJaarId" class ="form-control" asp-items="ViewBag.AcademieJaarId"></select>
             </div>
             <div class="form-group">
