--- a/Views/Inschrijving/Edit.cshtml
+++ b/Views/Inschrijving/Edit.cshtml
@@ -13,17 +13,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="InschrijvingId" />
             <div class="form-group">
-                <label asp-for="StudentId" class="control-label">Student</label>
+                <label asp-for="StudentId" class="control-label"></label>
                 <select asp-for="StudentId" class="form-control" asp-items="ViewBag.StudentId"></select>
                 <span asp-validation-for="StudentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VakLectorId" class="control-label">VakLector</label>
+                <label asp-for="VakLectorId" class="control-label">Vak</label>
                 <select asp-for="VakLectorId" class="form-control" asp-items="ViewBag.VakLectorId"></select>
                 <span asp-validation-for="VakLectorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AcademieJaarId" class="control-label">AcademieJaar</label>
+                <label asp-for="AcademieJaarId" class="control-label"></label>
                 <select asp-for="AcademieJaarId" class="form-control" asp-items="ViewBag.AcademieJaarId"></select>
                 <span asp-validation-for="AcademieJaarId" class="text-danger"></span>
             </div>
