--- a/Views/Lector/Create.cshtml
+++ b/Views/Lector/Create.cshtml
@@ -12,7 +12,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="GebruikerId" class="control-label">Gebruiker</label>
+                <label asp-for="GebruikerId" class="control-label"></label>
                 <select asp-for="GebruikerId" class ="form-control" asp-items="ViewBag.GebruikerId"></select>
             </div>
             <div class="form-group">
