--- a/Views/Lector/Edit.cshtml
+++ b/Views/Lector/Edit.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="LectorId" />
             <div class="form-group">
-                <label asp-for="GebruikerId" class="control-label">Gebruiker</label>
+                <label asp-for="GebruikerId" class="control-label"></label>
                 <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
                 <span asp-validation-for="GebruikerId" class="text-danger"></span>
             </div>
