--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                Student
+                @Html.DisplayNameFor(model => model.Gebruiker)
             </th>
             <th></th>
         </tr>
