--- a/Views/Vak/Create.cshtml
+++ b/Views/Vak/Create.cshtml
@@ -22,7 +22,7 @@
                 <span asp-validation-for="StudiePunten" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HandboekId" class="control-label">Handboek</label>
+                <label asp-for="HandboekId" class="control-label"></label>
                 <select asp-for="HandboekId" class ="form-control" asp-items="ViewBag.HandboekId"></select>
             </div>
             <div class="form-group">
