--- a/Views/Vak/Edit.cshtml
+++ b/Views/Vak/Edit.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="StudiePunten" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HandboekId" class="control-label">Handboek</label>
+                <label asp-for="HandboekId" class="control-label"></label>
                 <select asp-for="HandboekId" class="form-control" asp-items="ViewBag.HandboekId"></select>
                 <span asp-validation-for="HandboekId" class="text-danger"></span>
             </div>
