--- a/Views/VakLector/Edit.cshtml
+++ b/Views/VakLector/Edit.cshtml
@@ -13,12 +13,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="VakLectorId" />
             <div class="form-group">
-                <label asp-for="LectorId" class="control-label">Lector</label>
+                <label asp-for="LectorId" class="control-label"></label>
                 <select asp-for="LectorId" class="form-control" asp-items="ViewBag.LectorId"></select>
                 <span asp-validation-for="LectorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VakId" class="control-label">Vak</label>
+                <label asp-for="VakId" class="control-label"></label>
                 <select asp-for="VakId" class="form-control" asp-items="ViewBag.VakId"></select>
                 <span asp-validation-for="VakId" class="text-danger"></span>
             </div>
