--- a/Views/Lector/Details.cshtml
+++ b/Views/Lector/Details.cshtml
@@ -6,18 +6,31 @@
 
 <h1>Details Lector</h1>
 
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gebruiker)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.LectorId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Gebruiker)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Gebruiker.Email)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
+                @Html.DisplayFor(model => model.Gebruiker.Naam)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.Gebruiker.Email)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@Model?.LectorId">Edit</a> |
+                <a asp-action="Index">Back to List</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
