--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -12,7 +12,8 @@
             @Html.DisplayNameFor(model => model.Gebruiker)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
+            @Html.DisplayFor(model => model.Gebruiker.VoorNaam) 
+            @Html.DisplayFor(model => model.Gebruiker.Naam)
         </dd>
     </dl>
     
