--- a/Views/Vak/Delete.cshtml
+++ b/Views/Vak/Delete.cshtml
@@ -25,7 +25,7 @@
             @Html.DisplayNameFor(model => model.Handboek)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Handboek.HandboekId)
+            @Html.DisplayFor(model => model.Handboek.Titel)
         </dd>
     </dl>
     
