--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,50 +3,64 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - HogeschoolPXL</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HogeschoolPXL.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HogeschoolPXL</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AcademieJaar" asp-action="Index">AcademieJaar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Handboek" asp-action="Index">Handboek</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Gebruiker" asp-action="Index">Gebruiker</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Lector" asp-action="Index">Lector</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Student</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vak" asp-action="Index">Vak</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="VakLector" asp-action="Index">VakLector</a>
-                        </li>
-                    </ul>
-                </div>
+        <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+            <img src="img/pxl.png" class="mx-2" id="PXLLogo" />
+        </a>
+
+        <div class="dropdown">
+            <button>Gebruiker</button>
+            <div class="dropdown-content">
+                <a asp-controller="Gebruiker" asp-action="Index">Gebruiker</a>
+                <hr class="dropdown-divider">
+                <a asp-controller="Student" asp-action="Index">Student</a>
+                <a asp-controller="Lector" asp-action="Index">Lector</a>
             </div>
-        </nav>
+        </div>
+
+        @*<nav class="navbar navbar-expand-lg mb-4">
+            
+            <ul>
+                <li class="nav-item dropdown">
+                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
+                        Gebruikers
+                    </button>
+                    <ul class="dropdown-menu">
+                        
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
+                        Inschrijvingen
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" asp-controller="AcademieJaar" asp-action="Index">AcademieJaar</a></li>
+                        <li><a class="dropdown-item" asp-controller="Handboek" asp-action="Index">Handboek</a></li>
+                        <li><a class="dropdown-item" asp-controller="Vak" asp-action="Index">Vak</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
+                        Vak lector
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" asp-controller="VakLector" asp-action="Index">VakLector</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Zoeken" aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit">Zoeken</button>
+            </form>
+        </nav>*@
     </header>
 
     <div class="container">
@@ -55,7 +69,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer">
         <div class="container">
             HogeschoolPXL
         </div>
