--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,18 +1,48 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
 }
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
   margin-bottom: 60px;
+}
+header, footer {
+    box-shadow: 0 0 20px lightgrey;
+    background-color: #f4f4f4;
+}
+
+/* Media */
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+/* Logo */
+#PXLLogo {
+    box-shadow: 0 0 25px #f4f4f4;
+    border-radius: 50px;
+    height: 40px;
+    width: 40px;
+}
+
+/* Navbar */
+nav .dropdown:hover {
+    background-color: #f4f4f4;
+}
+/* Dropdown */ nav .dropdown { 
+    position: relative;
+    display: inline-block;
+}
+nav .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+nav .dropdown:hover .dropdown-content {
+    display: block;
 }
