--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,67 +10,52 @@
 </head>
 <body>
     <header>
-        <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-            <img src="img/pxl.png" class="mx-2" id="PXLLogo" />
+        <a asp-controller="Home" asp-action="Index">
+            <img src="~/img/pxl.png" id="PXLLogoImage" />
         </a>
 
         <div class="dropdown">
-            <button>Gebruiker</button>
+            <span>Gebruiker</span>
             <div class="dropdown-content">
-                <a asp-controller="Gebruiker" asp-action="Index">Gebruiker</a>
+                <a class="dropdown-item" asp-controller="Gebruiker" asp-action="Index">Gebruiker</a>
                 <hr class="dropdown-divider">
-                <a asp-controller="Student" asp-action="Index">Student</a>
-                <a asp-controller="Lector" asp-action="Index">Lector</a>
+                <a class="dropdown-item" asp-controller="Student" asp-action="Index">Student</a>
+                <a class="dropdown-item" asp-controller="Lector" asp-action="Index">Lector</a>
             </div>
         </div>
 
-        @*<nav class="navbar navbar-expand-lg mb-4">
-            
-            <ul>
-                <li class="nav-item dropdown">
-                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                        Gebruikers
-                    </button>
-                    <ul class="dropdown-menu">
-                        
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                        Inschrijvingen
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" asp-controller="AcademieJaar" asp-action="Index">AcademieJaar</a></li>
-                        <li><a class="dropdown-item" asp-controller="Handboek" asp-action="Index">Handboek</a></li>
-                        <li><a class="dropdown-item" asp-controller="Vak" asp-action="Index">Vak</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                        Vak lector
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" asp-controller="VakLector" asp-action="Index">VakLector</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Zoeken" aria-label="Search">
-                <button class="btn btn-outline-primary" type="submit">Zoeken</button>
-            </form>
-        </nav>*@
+        <div class="dropdown">
+            <span>Inschrijving</span>
+            <div class="dropdown-content">
+                <a class="dropdown-item" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a>
+                <hr class="dropdown-divider">
+                <a class="dropdown-item" asp-controller="AcademieJaar" asp-action="Index">AcademieJaar</a>
+                <a class="dropdown-item" asp-controller="Handboek" asp-action="Index">Handboek</a>
+                <a class="dropdown-item" asp-controller="Vak" asp-action="Index">Vak</a>
+            </div>
+        </div>
+
+        <div class="dropdown">
+            <span>VakLector</span>
+            <div class="dropdown-content">
+                <a class="dropdown-item" class="dropdown-item" asp-controller="VakLector" asp-action="Index">VakLector</a>
+            </div>
+        </div>
+        
+        <form class="d-flex justify-content-end" role="search">
+            <input class="form-control me-2" type="search" placeholder="Zoeken" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Zoeken</button>
+        </form>
     </header>
 
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
     <footer class="footer">
-        <div class="container">
+        <div id="footerText">
             HogeschoolPXL
         </div>
     </footer>
