--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,43 +6,68 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/* Header en Footer */
+header {
+    padding: 12px;
+    gap: 20px;
+
+    /* Row the Header */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 header, footer {
     box-shadow: 0 0 20px lightgrey;
     background-color: #f4f4f4;
+}
+footer #footerText {
+    font-size: 18px;
+    margin-left: 25px;
 }
 
 /* Media */
 @media (min-width: 768px) {
     html {
-        font-size: 16px;
+        /*font-size: 16px;*/
     }
 }
 
+/* Container */
+.container {
+    margin: 20px;
+}
+
 /* Logo */
-#PXLLogo {
-    box-shadow: 0 0 25px #f4f4f4;
-    border-radius: 50px;
+#PXLLogoImage {
     height: 40px;
     width: 40px;
+
+    box-shadow: 0 0 25px #f4f4f4;
+    border-radius: 50%;
 }
 
 /* Navbar */
-nav .dropdown:hover {
+header .dropdown:hover {
     background-color: #f4f4f4;
+    cursor: pointer;
 }
 /* Dropdown */ nav .dropdown { 
     position: relative;
     display: inline-block;
 }
-nav .dropdown-content {
+header .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 0 rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
 }
-nav .dropdown:hover .dropdown-content {
+header .dropdown:hover .dropdown-content {
     display: block;
+}
+header .dropdown span {
+    font-size: 18px;
 }
