--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <a asp-controller="Home" asp-action="Index">
-            <img src="~/img/pxl.png" id="PXLLogoImage" />
+        <a asp-controller="Home" asp-action="Index" id="logo">
+            <img src="~/img/pxl.png"/>
         </a>
 
         <div class="dropdown">
