--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -39,12 +39,13 @@ footer #footerText {
 }
 
 /* Logo */
-#PXLLogoImage {
+#logo {
+    box-shadow: 0 0 25px grey;
+    border-radius: 50%;
+}
+#logo img {
     height: 40px;
     width: 40px;
-
-    box-shadow: 0 0 25px #f4f4f4;
-    border-radius: 50%;
 }
 
 /* Navbar */
