--- a/Views/Lector/Delete.cshtml
+++ b/Views/Lector/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Gebruiker)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gebruiker.VoorNaam) 
+            @Html.DisplayFor(model => model.Gebruiker.Voornaam) 
             @Html.DisplayFor(model => model.Gebruiker.Naam)
         </dd>
     </dl>
