--- a/Views/Lector/Details.cshtml
+++ b/Views/Lector/Details.cshtml
@@ -21,7 +21,7 @@
     <tbody>
         <tr>
             <td>
-                @Html.DisplayFor(model => model.Gebruiker.VoorNaam)
+                @Html.DisplayFor(model => model.Gebruiker.Voornaam)
                 @Html.DisplayFor(model => model.Gebruiker.Naam)
             </td>
             <td>
