--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -22,7 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Gebruiker.VoorNaam)
+                @Html.DisplayFor(modelItem => item.Gebruiker.Voornaam)
                 @Html.DisplayFor(modelItem => item.Gebruiker.Naam)
             </td>
             <td>
