--- a/Views/VakLector/Index.cshtml
+++ b/Views/VakLector/Index.cshtml
@@ -25,7 +25,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Lector.Gebruiker.VoorNaam) 
+                @Html.DisplayFor(modelItem => item.Lector.Gebruiker.Voornaam) 
                 @Html.DisplayFor(modelItem => item.Lector.Gebruiker.Naam)
             </td>
             <td>
