--- a/Views/Gebruiker/Delete.cshtml
+++ b/Views/Gebruiker/Delete.cshtml
@@ -9,22 +9,22 @@
 
 <div>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Voornaam)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Voornaam)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Naam)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Naam)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VoorNaam)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VoorNaam)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
     </dl>
