--- a/Views/Gebruiker/Details.cshtml
+++ b/Views/Gebruiker/Details.cshtml
@@ -9,17 +9,17 @@
 
 <div>
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Voornaam)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Voornaam)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Naam)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Naam)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VoorNaam)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VoorNaam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
