--- a/Views/Inschrijving/Delete.cshtml
+++ b/Views/Inschrijving/Delete.cshtml
@@ -13,7 +13,7 @@
             @Html.DisplayNameFor(model => model.Student)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.Gebruiker.VoorNaam)
+            @Html.DisplayFor(model => model.Student.Gebruiker.Voornaam)
             @Html.DisplayFor(model => model.Student.Gebruiker.Naam)
         </dd>
         <dt class = "col-sm-2">
