--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -28,7 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Student.Gebruiker.VoorNaam) 
+                @Html.DisplayFor(modelItem => item.Student.Gebruiker.Voornaam) 
                 @Html.DisplayFor(modelItem => item.Student.Gebruiker.Naam)
             </td>
             <td>
