--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -33,26 +33,28 @@ footer #footerText {
 .createButton {
     margin: 6px 0;
     border-radius: 50px;
-    box-shadow: 0 0 40px lightgreen;
+    box-shadow: 0 0 8px lightgrey;
 }
 .createButtonParent {
     text-align: center;
+    justify-content: center;
+    display: flex;
 }
 .createButtonParent a {
     text-align: center;
     border-radius: 50px;
-}
-.createButtonParent a:first-child {
-    padding: 0;
-    margin: 0;
 }
 .createButtonParent a {
     height: 26px;
 }
-.bi-arrow-left {
+.arrow-left {
+    display: flex;
+    width: fit-content;
+    margin: 6px 6px;
     padding: 4px;
+
     border-radius: 50px;
-    box-shadow: 0 0 40px lightblue;
+    box-shadow: 0 0 8px lightgrey;
 }
 
 /* Logo */
